--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "email-validator": "^2.0.4",
     "formik": "^2.1.2",
@@ -17,6 +18,7 @@
     "react-holder": "^1.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-svg-holder": "^1.0.4",
     "yup": "^0.28.0"
   },
   "scripts": {
